--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "express": "^4.17.1",
         "express-session": "^1.17.1",
         "mysql": "^2.18.1",
+        "nodemon": "^2.0.4",
         "pug": "^3.0.0",
         "sanitize-html": "^1.27.0",
         "socket.io": "^2.3.0"
