--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "nodemon": "^2.0.4",
         "pug": "^3.0.0",
         "sanitize-html": "^1.27.0",
+        "session-file-store": "^1.4.0",
         "socket.io": "^2.3.0"
     },
     "devDependencies": {},
