--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "ejs": "^3.1.3",
         "express": "^4.17.1",
         "express-session": "^1.17.1",
+        "lodash": "^4.17.19",
         "mysql": "^2.18.1",
         "nodemon": "^2.0.4",
         "pug": "^3.0.0",
